docs/kmip-spec/v1.x/scraped/tags.md
# KMIP 1.2 — TTLV Tags

Total: **213** tags

| Tag Name                               | Hex Value                             |
|----------------------------------------|---------------------------------------|
| Activation Date                        | 420001                                |
| Application Data                       | 420002                                |
| Application Namespace                  | 420003                                |
| Application Specific Information       | 420004                                |
| Archive Date                           | 420005                                |
| Asynchronous Correlation Value         | 420006                                |
| Asynchronous Indicator                 | 420007                                |
| Attribute                              | 420008                                |
| Attribute Index                        | 420009                                |
| Attribute Name                         | 42000A                                |
| Attribute Value                        | 42000B                                |
| Authentication                         | 42000C                                |
| Batch Count                            | 42000D                                |
| Batch Error Continuation Option        | 42000E                                |
| Batch Item                             | 42000F                                |
| Batch Order Option                     | 420010                                |
| Block Cipher Mode                      | 420011                                |
| Cancellation Result                    | 420012                                |
| Certificate                            | 420013                                |
| Certificate Identifier                 | 420014 (deprecated as of version 1.1) |
| Certificate Issuer                     | 420015 (deprecated as of version 1.1) |
| Certificate Issuer Alternative Name    | 420016 (deprecated as of version 1.1) |
| Certificate Issuer Distinguished Name  | 420017 (deprecated as of version 1.1) |
| Certificate Request                    | 420018                                |
| Certificate Request Type               | 420019                                |
| Certificate Subject                    | 42001A (deprecated as of version 1.1) |
| Certificate Subject Alternative Name   | 42001B (deprecated as of version 1.1) |
| Certificate Subject Distinguished Name | 42001C (deprecated as of version 1.1) |
| Certificate Type                       | 42001D                                |
| Certificate Value                      | 42001E                                |
| Common Template-Attribute              | 42001F                                |
| Compromise Date                        | 420020                                |
| Compromise Occurrence Date             | 420021                                |
| Contact Information                    | 420022                                |
| Credential                             | 420023                                |
| Credential Type                        | 420024                                |
| Credential Value                       | 420025                                |
| Criticality Indicator                  | 420026                                |
| CRT Coefficient                        | 420027                                |
| Cryptographic Algorithm                | 420028                                |
| Cryptographic Domain Parameters        | 420029                                |
| Cryptographic Length                   | 42002A                                |
| Cryptographic Parameters               | 42002B                                |
| Cryptographic Usage Mask               | 42002C                                |
| Custom Attribute                       | 42002D                                |
| D                                      | 42002E                                |
| Deactivation Date                      | 42002F                                |
| Derivation Data                        | 420030                                |
| Derivation Method                      | 420031                                |
| Derivation Parameters                  | 420032                                |
| Destroy Date                           | 420033                                |
| Digest                                 | 420034                                |
| Digest Value                           | 420035                                |
| Encryption Key Information             | 420036                                |
| G                                      | 420037                                |
| Hashing Algorithm                      | 420038                                |
| Initial Date                           | 420039                                |
| Initialization Vector                  | 42003A                                |
| Issuer                                 | 42003B (deprecated as of version 1.1) |
| Iteration Count                        | 42003C                                |
| IV/Counter/Nonce                       | 42003D                                |
| J                                      | 42003E                                |
| Key                                    | 42003F                                |
| Key Block                              | 420040                                |
| Key Compression Type                   | 420041                                |
| Key Format Type                        | 420042                                |
| Key Material                           | 420043                                |
| Key Part Identifier                    | 420044                                |
| Key Value                              | 420045                                |
| Key Wrapping Data                      | 420046                                |
| Key Wrapping Specification             | 420047                                |
| Last Change Date                       | 420048                                |
| Lease Time                             | 420049                                |
| Link                                   | 42004A                                |
| Link Type                              | 42004B                                |
| Linked Object Identifier               | 42004C                                |
| MAC/Signature                          | 42004D                                |
| MAC/Signature Key Information          | 42004E                                |
| Maximum Items                          | 42004F                                |
| Maximum Response Size                  | 420050                                |
| Message Extension                      | 420051                                |
| Modulus                                | 420052                                |
| Name                                   | 420053                                |
| Name Type                              | 420054                                |
| Name Value                             | 420055                                |
| Object Group                           | 420056                                |
| Object Type                            | 420057                                |
| Offset                                 | 420058                                |
| Opaque Data Type                       | 420059                                |
| Opaque Data Value                      | 42005A                                |
| Opaque Object                          | 42005B                                |
| Operation                              | 42005C                                |
| Operation Policy Name                  | 42005D                                |
| P                                      | 42005E                                |
| Padding Method                         | 42005F                                |
| Prime Exponent P                       | 420060                                |
| Prime Exponent Q                       | 420061                                |
| Prime Field Size                       | 420062                                |
| Private Exponent                       | 420063                                |
| Private Key                            | 420064                                |
| Private Key Template-Attribute         | 420065                                |
| Private Key Unique Identifier          | 420066                                |
| Process Start Date                     | 420067                                |
| Protect Stop Date                      | 420068                                |
| Protocol Version                       | 420069                                |
| Protocol Version Major                 | 42006A                                |
| Protocol Version Minor                 | 42006B                                |
| Public Exponent                        | 42006C                                |
| Public Key                             | 42006D                                |
| Public Key Template-Attribute          | 42006E                                |
| Public Key Unique Identifier           | 42006F                                |
| Put Function                           | 420070                                |
| Q                                      | 420071                                |
| Q String                               | 420072                                |
| Qlength                                | 420073                                |
| Query Function                         | 420074                                |
| Recommended Curve                      | 420075                                |
| Replaced Unique Identifier             | 420076                                |
| Request Header                         | 420077                                |
| Request Message                        | 420078                                |
| Request Payload                        | 420079                                |
| Response Header                        | 42007A                                |
| Response Message                       | 42007B                                |
| Response Payload                       | 42007C                                |
| Result Message                         | 42007D                                |
| Result Reason                          | 42007E                                |
| Result Status                          | 42007F                                |
| Revocation Message                     | 420080                                |
| Revocation Reason                      | 420081                                |
| Revocation Reason Code                 | 420082                                |
| Key Role Type                          | 420083                                |
| Salt                                   | 420084                                |
| Secret Data                            | 420085                                |
| Secret Data Type                       | 420086                                |
| Serial Number                          | 420087 (deprecated as of version 1.1) |
| Server Information                     | 420088                                |
| Split Key                              | 420089                                |
| Split Key Method                       | 42008A                                |
| Split Key Parts                        | 42008B                                |
| Split Key Threshold                    | 42008C                                |
| State                                  | 42008D                                |
| Storage Status Mask                    | 42008E                                |
| Symmetric Key                          | 42008F                                |
| Template                               | 420090                                |
| Template-Attribute                     | 420091                                |
| Time Stamp                             | 420092                                |
| Unique Batch Item ID                   | 420093                                |
| Unique Identifier                      | 420094                                |
| Usage Limits                           | 420095                                |
| Usage Limits Count                     | 420096                                |
| Usage Limits Total                     | 420097                                |
| Usage Limits Unit                      | 420098                                |
| Username                               | 420099                                |
| Validity Date                          | 42009A                                |
| Validity Indicator                     | 42009B                                |
| Vendor Extension                       | 42009C                                |
| Vendor Identification                  | 42009D                                |
| Wrapping Method                        | 42009E                                |
| X                                      | 42009F                                |
| Y                                      | 4200A0                                |
| Password                               | 4200A1                                |
| Device Identifier                      | 4200A2                                |
| Encoding Option                        | 4200A3                                |
| Extension Information                  | 4200A4                                |
| Extension Name                         | 4200A5                                |
| Extension Tag                          | 4200A6                                |
| Extension Type                         | 4200A7                                |
| Fresh                                  | 4200A8                                |
| Machine Identifier                     | 4200A9                                |
| Media Identifier                       | 4200AA                                |
| Network Identifier                     | 4200AB                                |
| Object Group Member                    | 4200AC                                |
| Certificate Length                     | 4200AD                                |
| Digital Signature Algorithm            | 4200AE                                |
| Certificate Serial Number              | 4200AF                                |
| Device Serial Number                   | 4200B0                                |
| Issuer Alternative Name                | 4200B1                                |
| Issuer Distinguished Name              | 4200B2                                |
| Subject Alternative Name               | 4200B3                                |
| Subject Distinguished Name             | 4200B4                                |
| X.509 Certificate Identifier           | 4200B5                                |
| X.509 Certificate Issuer               | 4200B6                                |
| X.509 Certificate Subject              | 4200B7                                |
| Key Value Location                     | 4200B8                                |
| Key Value Location Value               | 4200B9                                |
| Key Value Location Type                | 4200BA                                |
| Key Value Present                      | 4200BB                                |
| Original Creation Date                 | 4200BC                                |
| PGP Key                                | 4200BD                                |
| PGP Key Version                        | 4200BE                                |
| Alternative Name                       | 4200BF                                |
| Alternative Name Value                 | 4200C0                                |
| Alternative Name Type                  | 4200C1                                |
| Data                                   | 4200C2                                |
| Signature Data                         | 4200C3                                |
| Data Length                            | 4200C4                                |
| Random IV                              | 4200C5                                |
| MAC Data                               | 4200C6                                |
| Attestation Type                       | 4200C7                                |
| Nonce                                  | 4200C8                                |
| Nonce ID                               | 4200C9                                |
| Nonce Value                            | 4200CA                                |
| Attestation Measurement                | 4200CB                                |
| Attestation Assertion                  | 4200CC                                |
| IV Length                              | 4200CD                                |
| Tag Length                             | 4200CE                                |
| Fixed Field Length                     | 4200CF                                |
| Counter Length                         | 4200D0                                |
| Initial Counter Value                  | 4200D1                                |
| Invocation Field Length                | 4200D2                                |
| Attestation Capable Indicator          | 4200D3                                |
| (Reserved)                             | 4200D4  42FFFF                       |
| Extensions                             | 540000  54FFFF                       |
