docs/kmip-spec/v2.x/scraped/tags.md
# KMIP 2.1 — TTLV Tags

Total: **374** tags

| Tag Name                                 | Hex Value       |
|------------------------------------------|-----------------|
| Activation Date                          | 420001          |
| Application Data                         | 420002          |
| Application Namespace                    | 420003          |
| Application Specific Information         | 420004          |
| Archive Date                             | 420005          |
| Asynchronous Correlation Value           | 420006          |
| Asynchronous Indicator                   | 420007          |
| Attribute                                | 420008          |
| (Reserved)                               | 420009          |
| Attribute Name                           | 42000A          |
| Attribute Value                          | 42000B          |
| Authentication                           | 42000C          |
| Batch Count                              | 42000D          |
| Batch Error Continuation Option          | 42000E          |
| Batch Item                               | 42000F          |
| Batch Order Option                       | 420010          |
| Block Cipher Mode                        | 420011          |
| Cancellation Result                      | 420012          |
| Certificate                              | 420013          |
| (Reserved)                               | 420014          |
| (Reserved)                               | 420015          |
| (Reserved)                               | 420016          |
| (Reserved)                               | 420017          |
| Certificate Request                      | 420018          |
| Certificate Request Type                 | 420019          |
| (Reserved)                               | 42001A          |
| (Reserved)                               | 42001B          |
| (Reserved)                               | 42001C          |
| Certificate Type                         | 42001D          |
| Certificate Value                        | 42001E          |
| (Reserved)                               | 42001F          |
| Compromise Date                          | 420020          |
| Compromise Occurrence Date               | 420021          |
| Contact Information                      | 420022          |
| Credential                               | 420023          |
| Credential Type                          | 420024          |
| Credential Value                         | 420025          |
| Criticality Indicator                    | 420026          |
| CRT Coefficient                          | 420027          |
| Cryptographic Algorithm                  | 420028          |
| Cryptographic Domain Parameters          | 420029          |
| Cryptographic Length                     | 42002A          |
| Cryptographic Parameters                 | 42002B          |
| Cryptographic Usage Mask                 | 42002C          |
| (Reserved)                               | 42002D          |
| D                                        | 42002E          |
| Deactivation Date                        | 42002F          |
| Derivation Data                          | 420030          |
| Derivation Method                        | 420031          |
| Derivation Parameters                    | 420032          |
| Destroy Date                             | 420033          |
| Digest                                   | 420034          |
| Digest Value                             | 420035          |
| Encryption Key Information               | 420036          |
| G                                        | 420037          |
| Hashing Algorithm                        | 420038          |
| Initial Date                             | 420039          |
| Initialization Vector                    | 42003A          |
| (Reserved)                               | 42003B          |
| Iteration Count                          | 42003C          |
| IV/Counter/Nonce                         | 42003D          |
| J                                        | 42003E          |
| Key                                      | 42003F          |
| Key Block                                | 420040          |
| Key Compression Type                     | 420041          |
| Key Format Type                          | 420042          |
| Key Material                             | 420043          |
| Key Part Identifier                      | 420044          |
| Key Value                                | 420045          |
| Key Wrapping Data                        | 420046          |
| Key Wrapping Specification               | 420047          |
| Last Change Date                         | 420048          |
| Lease Time                               | 420049          |
| Link                                     | 42004A          |
| Link Type                                | 42004B          |
| Linked Object Identifier                 | 42004C          |
| MAC/Signature                            | 42004D          |
| MAC/Signature Key Information            | 42004E          |
| Maximum Items                            | 42004F          |
| Maximum Response Size                    | 420050          |
| Message Extension                        | 420051          |
| Modulus                                  | 420052          |
| Name Type                                | 420054          |
| Name Value                               | 420055          |
| Object Group                             | 420056          |
| Object Type                              | 420057          |
| Offset                                   | 420058          |
| Opaque Data Type                         | 420059          |
| Opaque Data Value                        | 42005A          |
| Opaque Object                            | 42005B          |
| Operation                                | 42005C          |
| (Reserved)                               | 42005D          |
| P                                        | 42005E          |
| Padding Method                           | 42005F          |
| Prime Exponent P                         | 420060          |
| Prime Exponent Q                         | 420061          |
| Prime Field Size                         | 420062          |
| Private Exponent                         | 420063          |
| Private Key                              | 420064          |
| (Reserved)                               | 420065          |
| Private Key Unique Identifier            | 420066          |
| Process Start Date                       | 420067          |
| Protect Stop Date                        | 420068          |
| Protocol Version                         | 420069          |
| Protocol Version Major                   | 42006A          |
| Protocol Version Minor                   | 42006B          |
| Public Exponent                          | 42006C          |
| Public Key                               | 42006D          |
| (Reserved)                               | 42006E          |
| Public Key Unique Identifier             | 42006F          |
| Put Function                             | 420070          |
| Q                                        | 420071          |
| Q String                                 | 420072          |
| Qlength                                  | 420073          |
| Query Function                           | 420074          |
| Recommended Curve                        | 420075          |
| Replaced Unique Identifier               | 420076          |
| Request Header                           | 420077          |
| Request Message                          | 420078          |
| Request Payload                          | 420079          |
| Response Header                          | 42007A          |
| Response Message                         | 42007B          |
| Response Payload                         | 42007C          |
| Result Message                           | 42007D          |
| Result Reason                            | 42007E          |
| Result Status                            | 42007F          |
| Revocation Message                       | 420080          |
| Revocation Reason                        | 420081          |
| Revocation Reason Code                   | 420082          |
| Key Role Type                            | 420083          |
| Salt                                     | 420084          |
| Secret Data                              | 420085          |
| Secret Data Type                         | 420086          |
| (Reserved)                               | 420087          |
| Server Information                       | 420088          |
| Split Key                                | 420089          |
| Split Key Method                         | 42008A          |
| Split Key Parts                          | 42008B          |
| Split Key Threshold                      | 42008C          |
| State                                    | 42008D          |
| Storage Status Mask                      | 42008E          |
| Symmetric Key                            | 42008F          |
| (Reserved)                               | 420090          |
| (Reserved)                               | 420091          |
| Time Stamp                               | 420092          |
| Unique Batch Item ID                     | 420093          |
| Unique Identifier                        | 420094          |
| Usage Limits                             | 420095          |
| Usage Limits Count                       | 420096          |
| Usage Limits Total                       | 420097          |
| Usage Limits Unit                        | 420098          |
| Username                                 | 420099          |
| Validity Date                            | 42009A          |
| Validity Indicator                       | 42009B          |
| Vendor Extension                         | 42009C          |
| Vendor Identification                    | 42009D          |
| Wrapping Method                          | 42009E          |
| X                                        | 42009F          |
| Y                                        | 4200A0          |
| Password                                 | 4200A1          |
| Device Identifier                        | 4200A2          |
| Encoding Option                          | 4200A3          |
| Extension Information                    | 4200A4          |
| Extension Name                           | 4200A5          |
| Extension Tag                            | 4200A6          |
| Extension Type                           | 4200A7          |
| Fresh                                    | 4200A8          |
| Machine Identifier                       | 4200A9          |
| Media Identifier                         | 4200AA          |
| Network Identifier                       | 4200AB          |
| Object Group Member                      | 4200AC          |
| Certificate Length                       | 4200AD          |
| Digital Signature Algorithm              | 4200AE          |
| Certificate Serial Number                | 4200AF          |
| Device Serial Number                     | 4200B0          |
| Issuer Alternative Name                  | 4200B1          |
| Issuer Distinguished Name                | 4200B2          |
| Subject Alternative Name                 | 4200B3          |
| Subject Distinguished Name               | 4200B4          |
| X.509 Certificate Identifier             | 4200B5          |
| X.509 Certificate Issuer                 | 4200B6          |
| X.509 Certificate Subject                | 4200B7          |
| Key Value Location                       | 4200B8          |
| Key Value Location Value                 | 4200B9          |
| Key Value Location Type                  | 4200BA          |
| Key Value Present                        | 4200BB          |
| Original Creation Date                   | 4200BC          |
| PGP Key                                  | 4200BD          |
| PGP Key Version                          | 4200BE          |
| Alternative Name                         | 4200BF          |
| Alternative Name Value                   | 4200C0          |
| Alternative Name Type                    | 4200C1          |
| Data                                     | 4200C2          |
| Signature Data                           | 4200C3          |
| Data Length                              | 4200C4          |
| Random IV                                | 4200C5          |
| MAC Data                                 | 4200C6          |
| Attestation Type                         | 4200C7          |
| Nonce                                    | 4200C8          |
| Nonce ID                                 | 4200C9          |
| Nonce Value                              | 4200CA          |
| Attestation Measurement                  | 4200CB          |
| Attestation Assertion                    | 4200CC          |
| IV Length                                | 4200CD          |
| Tag Length                               | 4200CE          |
| Fixed Field Length                       | 4200CF          |
| Counter Length                           | 4200D0          |
| Initial Counter Value                    | 4200D1          |
| Invocation Field Length                  | 4200D2          |
| Attestation Capable Indicator            | 4200D3          |
| Offset Items                             | 4200D4          |
| Located Items                            | 4200D5          |
| Correlation Value                        | 4200D6          |
| Init Indicator                           | 4200D7          |
| Final Indicator                          | 4200D8          |
| RNG Parameters                           | 4200D9          |
| RNG Algorithm                            | 4200DA          |
| DRBG Algorithm                           | 4200DB          |
| FIPS186 Variation                        | 4200DC          |
| Prediction Resistance                    | 4200DD          |
| Random Number Generator                  | 4200DE          |
| Validation Information                   | 4200DF          |
| Validation Authority Type                | 4200E0          |
| Validation Authority Country             | 4200E1          |
| Validation Authority URI                 | 4200E2          |
| Validation Version Major                 | 4200E3          |
| Validation Version Minor                 | 4200E4          |
| Validation Type                          | 4200E5          |
| Validation Level                         | 4200E6          |
| Validation Certificate Identifier        | 4200E7          |
| Validation Certificate URI               | 4200E8          |
| Validation Vendor URI                    | 4200E9          |
| Validation Profile                       | 4200EA          |
| Profile Information                      | 4200EB          |
| Profile Name                             | 4200EC          |
| Server URI                               | 4200ED          |
| Server Port                              | 4200EE          |
| Streaming Capability                     | 4200EF          |
| Asynchronous Capability                  | 4200F0          |
| Attestation Capability                   | 4200F1          |
| Unwrap Mode                              | 4200F2          |
| Destroy Action                           | 4200F3          |
| Shredding Algorithm                      | 4200F4          |
| RNG Mode                                 | 4200F5          |
| Client Registration Method               | 4200F6          |
| Capability Information                   | 4200F7          |
| Key Wrap Type                            | 4200F8          |
| Batch Undo Capability                    | 4200F9          |
| Batch Continue Capability                | 4200FA          |
| PKCS#12 Friendly Name                    | 4200FB          |
| Description                              | 4200FC          |
| Comment                                  | 4200FD          |
| Authenticated Encryption Additional Data | 4200FE          |
| Authenticated Encryption Tag             | 4200FF          |
| Salt Length                              | 420100          |
| Mask Generator                           | 420101          |
| Mask Generator Hashing Algorithm         | 420102          |
| P Source                                 | 420103          |
| Trailer Field                            | 420104          |
| Client Correlation Value                 | 420105          |
| Server Correlation Value                 | 420106          |
| Digested Data                            | 420107          |
| Certificate Subject CN                   | 420108          |
| Certificate Subject O                    | 420109          |
| Certificate Subject OU                   | 42010A          |
| Certificate Subject Email                | 42010B          |
| Certificate Subject C                    | 42010C          |
| Certificate Subject ST                   | 42010D          |
| Certificate Subject L                    | 42010E          |
| Certificate Subject UID                  | 42010F          |
| Certificate Subject Serial Number        | 420110          |
| Certificate Subject Title                | 420111          |
| Certificate Subject DC                   | 420112          |
| Certificate Subject DN Qualifier         | 420113          |
| Certificate Issuer CN                    | 420114          |
| Certificate Issuer O                     | 420115          |
| Certificate Issuer OU                    | 420116          |
| Certificate Issuer Email                 | 420117          |
| Certificate Issuer C                     | 420118          |
| Certificate Issuer ST                    | 420119          |
| Certificate Issuer L                     | 42011A          |
| Certificate Issuer UID                   | 42011B          |
| Certificate Issuer Serial Number         | 42011C          |
| Certificate Issuer Title                 | 42011D          |
| Certificate Issuer DC                    | 42011E          |
| Certificate Issuer DN Qualifier          | 42011F          |
| Sensitive                                | 420120          |
| Always Sensitive                         | 420121          |
| Extractable                              | 420122          |
| Never Extractable                        | 420123          |
| Replace Existing                         | 420124          |
| Attributes                               | 420125          |
| Common Attributes                        | 420126          |
| Private Key Attributes                   | 420127          |
| Public Key Attributes                    | 420128          |
| Extension Enumeration                    | 420129          |
| Extension Attribute                      | 42012A          |
| Extension Parent Structure Tag           | 42012B          |
| Extension Description                    | 42012C          |
| Server Name                              | 42012D          |
| Server Serial Number                     | 42012E          |
| Server Version                           | 42012F          |
| Server Load                              | 420130          |
| Product Name                             | 420131          |
| Build Level                              | 420132          |
| Build Date                               | 420133          |
| Cluster Info                             | 420134          |
| Alternate Failover Endpoints             | 420135          |
| Short Unique Identifier                  | 420136          |
| Reserved                                 | 420137          |
| Certificate Request Unique Identifier    | 420139          |
| NIST Key Type                            | 42013A          |
| Attribute Reference                      | 42013B          |
| Current Attribute                        | 42013C          |
| New Attribute                            | 42013D          |
| (Reserved)                               | 42013E          |
| (Reserved)                               | 42013F          |
| Certificate Request Value                | 420140          |
| Log Message                              | 420141          |
| Profile Version                          | 420142          |
| Profile Version Major                    | 420143          |
| Profile Version Minor                    | 420144          |
| Protection Level                         | 420145          |
| Protection Period                        | 420146          |
| Quantum Safe                             | 420147          |
| Quantum Safe Capability                  | 420148          |
| Ticket                                   | 420149          |
| Ticket Type                              | 42014A          |
| Ticket Value                             | 42014B          |
| Request Count                            | 42014C          |
| Rights                                   | 42014D          |
| Objects                                  | 42014E          |
| Operations                               | 42014F          |
| Right                                    | 420150          |
| Endpoint Role                            | 420151          |
| Defaults Information                     | 420152          |
| Object Defaults                          | 420153          |
| Ephemeral                                | 420154          |
| Server Hashed Password                   | 420155          |
| One Time Password                        | 420156          |
| Hashed Password                          | 420157          |
| Adjustment Type                          | 420158          |
| PKCS#11 Interface                        | 420159          |
| PKCS#11 Function                         | 42015A          |
| PKCS#11 Input Parameters                 | 42015B          |
| PKCS#11 Output Parameters                | 42015C          |
| PKCS#11 Return Code                      | 42015D          |
| Protection Storage Mask                  | 42015E          |
| Protection Storage Masks                 | 42015F          |
| Interop Function                         | 420160          |
| Interop Identifier                       | 420161          |
| Adjustment Value                         | 420162          |
| Common Protection Storage Masks          | 420163          |
| Private Protection Storage Masks         | 420164          |
| Public Protection Storage Masks          | 420165          |
| Object Groups                            | 420166          |
| Object Types                             | 420167          |
| Constraints                              | 420168          |
| Constraint                               | 420169          |
| Rotate Interval                          | 0x42016A        |
| Rotate Automatic                         | 0x42016B        |
| Rotate Offset                            | 0x42016C        |
| Rotate Date                              | 0x42016D        |
| Rotate Generation                        | 0x42016E        |
| Rotate Name                              | 0x42016F        |
| Rotate Name Value                        | 0x420170        |
| Rotate Name Type                         | 0x420171        |
| Rotate Latest                            | 0x420172        |
| Asynchronous Request                     | 0x420173        |
| Submission Date                          | 0x420174        |
| Processing Stage                         | 0x420175        |
| Asynchronous Correlation Values          | 0x420176        |
| (Reserved)                               | 420XXX  42FFFF |
| Extensions                               | 540000  54FFFF |
